before await fix

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,4 +1,5 @@
 {
     "title": "Title",
-    "description": "Description"
+    "description": "Description",
+    "about": "This site is under construction<br /><l>Steam</l>"
 }
