--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -1,4 +1,5 @@
 {
     "title": "タイトル",
-    "description": "ディスクリプション"
+    "description": "ディスクリプション",
+    "about": "このサイトは準備中です。<br /><l>Steam</l>"
 }
