--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,5 +1,5 @@
 {
     "title": "Title",
     "description": "Description",
-    "about": "This site is under construction<br /><l>Steam</l>"
+    "about": "This site is under construction<br /><a>Steam Store</a>"
 }
