--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -2,5 +2,25 @@
   "title": "タイトル",
   "description": "ディスクリプション",
   "underConstruction": "このサイトは準備中です。<br />デモ目的に公開しています。",
-  "about": "LBoL Logsは<steam>東方光耀夜 〜 Lost Branch of Legend</steam> (LBoL)のプレイ履歴を共有するサービスです。<br />ゲーム内の履歴データは情報が少なく過去50回分しなかい保存されないため、自作Mod<mod>LBoL Run Logger</mod> (開発中)が生成したデータだけのサポートとなります。"
+  "about": "LBoL Logsは<steam>東方光耀夜 〜 Lost Branch of Legend</steam> (LBoL)のプレイ履歴を共有するサービスです。<br />ゲーム内の履歴データは情報が少なく過去50回分しなかい保存されないため、自作Mod<mod>LBoL Run Logger</mod> (開発中)が生成したデータだけのサポートとなります。",
+  "roadmap": {
+    "keys": {
+      "roadmap": "ロードマップ",
+      "now": "現在",
+      "next": "次",
+      "later": "今後",
+      "trash": "予定なし"
+    },
+    "now": [
+
+    ],
+    "next": [
+
+    ],
+    "later": [
+    ],
+    "trash": [
+      
+    ]
+  }
 }
