--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -11,16 +11,18 @@
       "later": "今後",
       "trash": "予定なし"
     },
-    "now": [
+    "categories": {
+      "now": [
 
-    ],
-    "next": [
+      ],
+      "next": [
 
-    ],
-    "later": [
-    ],
-    "trash": [
-      
-    ]
+      ],
+      "later": [
+      ],
+      "trash": [
+
+      ]
+    }
   }
 }
