--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -3,6 +3,11 @@
   "description": "ディスクリプション",
   "underConstruction": "このサイトは準備中です。<br />デモ目的に公開しています。",
   "about": "LBoL Logsは<steam>東方光耀夜 〜 Lost Branch of Legend</steam> (LBoL)のプレイ履歴を共有するサービスです。<br />ゲーム内の履歴データは情報が少なく過去50回分しなかい保存されないため、自作Mod<mod>LBoL Run Logger</mod> (開発中)が生成したデータだけのサポートとなります。",
+  "done": {
+    "key": "完了",
+    "value": [
+    ]
+  },
   "roadmap": {
     "keys": {
       "roadmap": "ロードマップ",
@@ -13,15 +18,19 @@
     },
     "categories": {
       "now": [
-
+        "デモ用意",
+        "基本表示"
       ],
       "next": [
-
+        "画像表示",
+        "正邪戦闘詳細"
+        "戦闘以外（イベント、ショップ）など"
       ],
       "later": [
       ],
       "trash": [
-
+        "戦闘詳細",
+        "玉匣対応"
       ]
     }
   }
