top page style and content

--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -1,11 +1,15 @@
 {
-  "title": "タイトル",
+  "title": "LBoL Logs - 東方光耀夜プレイ履歴共有",
   "description": "ディスクリプション",
   "underConstruction": "このサイトは準備中です。<br />デモ目的に公開しています。",
-  "about": "LBoL Logsは<steam>東方光耀夜 〜 Lost Branch of Legend</steam> (LBoL)のプレイ履歴を共有するサービスです。<br />ゲーム内の履歴データは情報が少なく過去50回分しなかい保存されないため、自作Mod<mod>LBoL Run Logger</mod> (開発中)が生成したデータだけのサポートとなります。",
+  "about": "LBoL Logsは<steam>東方光耀夜 〜 Lost Branch of Legend</steam> (LBoL)のプレイ履歴を共有するサービスです。<br />ゲーム内の履歴データは情報が少なく過去50回分しなかい保存されないため、自作Mod<mod>LBoL Run Logger</mod> (開発中)が生成したデータだけのサポートとなります。<br />意見などはお手数ですが、<discord>Discordの日本語専用スレッド</discord>からお願いします。",
   "done": {
     "key": "完了",
     "value": [
+      "サイト基本表示",
+      "Mod基本機能（公開前）",
+      "言語切り替え",
+      "バージョン切り替え（v1.5.1以降）"
     ]
   },
   "roadmap": {
@@ -14,24 +18,29 @@
       "now": "現在",
       "next": "次",
       "later": "今後",
-      "trash": "予定なし"
+      "trash": "予定なし（現時点）"
     },
     "categories": {
       "now": [
-        "デモ用意",
-        "基本表示"
+        "プレイ履歴のデモ",
+        "プレイ履歴の基本表示"
       ],
       "next": [
         "画像表示",
-        "正邪戦闘詳細"
-        "戦闘以外（イベント、ショップ）など"
+        "正邪戦闘詳細",
+        "戦闘以外（イベント、ショップなど）のマス",
+        "Mod公開",
+        "履歴アップロード機能（URLで共有）"
       ],
       "later": [
+        "履歴一覧（フィルタ、ソート）",
+        "レスポンシブ対応（SP表示）"
       ],
       "trash": [
         "戦闘詳細",
         "玉匣対応"
       ]
     }
-  }
+  },
+  "version": "バージョン"
 }
