--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -38,7 +38,8 @@
       ],
       "trash": [
         "戦闘詳細",
-        "玉匣対応"
+        "玉匣対応",
+        "広告・有料機能（今後も広告なし、無料で利用いただけます）"
       ]
     }
   },
