--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -4,13 +4,29 @@
   "underConstruction": "このサイトは準備中です。<br />デモ目的に公開しています。",
   "about": "LBoL Logsは<steam>東方光耀夜 〜 Lost Branch of Legend</steam> (LBoL)のプレイ履歴を共有するサービスです。<br />ゲーム内の履歴データは情報が少なく過去50回分しなかい保存されないため、自作Mod<mod>LBoL Run Logger</mod> (開発中)が生成したデータだけのサポートとなります。<br />意見などはお手数ですが、<discord>Discordの日本語専用スレッド</discord>からお願いします。",
   "done": {
-    "key": "完了",
-    "value": [
-      "サイト基本表示",
-      "Mod基本機能（公開前）",
-      "言語切り替え",
-      "バージョン切り替え（v1.5.1以降）"
-    ]
+    "keys": {
+      "done": "完了",
+      "site": "サイト",
+      "mod": "Mod機能（公開前）"
+    },
+    "categories": {
+      "site": [
+        "サイト基本表示",
+        "言語切り替え",
+        "バージョン切り替え（v1.5.1以降）"
+      ],
+      "mod": [
+        "キャラ情報",
+        "難易度、難題、結果",
+        "マップ",
+        "ルート",
+        "展示品の提示（イベントやショップを除く）、獲得、喪失履歴",
+        "カードの提示（イベントやショップを除く）、獲得、削除、アップグレード履歴",
+        "HP/最大HP、P/最大P、金の変動",
+        "敵エンカウント（名前とターン数のみ）",
+        "イベントの名前と選択肢の記録"
+      ]
+    }
   },
   "roadmap": {
     "keys": {
