--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -39,7 +39,7 @@
     "categories": {
       "now": [
         "Prepare DEMO",
-        "Basic display"
+        "Basic display of run history"
       ],
       "next": [
         "Images",
