--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -59,5 +59,12 @@
       ]
     }
   },
+  "disclaimers": {
+    "key": "免責事項",
+    "value": [
+      "クッキー収集（ただし言語設定はクッキー保存）",
+      "PC情報、Steamアカウント情報、支払情報などは一切取得しておりません"
+    ]
+  },
   "version": "バージョン"
 }
