common.json を更新

--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -62,8 +62,9 @@
   "disclaimers": {
     "key": "免責事項",
     "value": [
-      "クッキー収集（ただし言語設定はクッキー保存）",
-      "PC情報、Steamアカウント情報、支払情報などは一切取得しておりません"
+      "クッキー収集はしておりません（ただし言語設定はクッキーに保存されます）",
+      "PC情報、Steamアカウント情報、支払情報などの個人情報はMod経由で取得しておらず、生成されたデータにも一切含まれません",
+      "アップロード時に最低限のバリデーションは行われますが、誤って個人情報等を送信した場合、当方は一切の責任を負いません"
     ]
   },
   "version": "バージョン"
