--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -1,5 +1,7 @@
 {
   "title": "LBoL Logs - 東方光耀夜プレイ履歴共有",
+  "titleHeader": "LBoL Logs<pc> - 東方光耀夜プレイ履歴共有</pc>",
+  "titleFooter": "<sp1>LBoL Logs</sp1><pc> - </pc><sp2>東方光耀夜プレイ履歴共有</sp2>",
   "description": "ディスクリプション",
   "underConstruction": "このサイトは準備中です。<br />デモ目的に公開しています。",
   "about": "LBoL Logsは<steam>東方光耀夜 〜 Lost Branch of Legend</steam> (LBoL)のプレイ履歴を共有するサービスです。<br />ゲーム内の履歴データは情報が少なく過去50回分しなかい保存されないため、自作Mod<mod>LBoL Run Logger</mod> (開発中)が生成したデータだけのサポートとなります。<br />意見などはお手数ですが、<discord>Discordの日本語専用スレッド</discord>からお願いします。",
