split title to subtitle

--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -1,7 +1,6 @@
 {
-  "title": "LBoL Logs - 東方光耀夜プレイ履歴共有",
-  "titleHeader": "LBoL Logs<pc> - 東方光耀夜プレイ履歴共有</pc>",
-  "titleFooter": "<sp1>LBoL Logs</sp1><pc> - </pc><sp2>東方光耀夜プレイ履歴共有</sp2>",
+  "title": "LBoL Logs",
+  "subtitle" : "東方光耀夜プレイ履歴共有",
   "description": "LBoL Logsは東方光耀夜 〜 Lost Branch of Legend (LBoL)のプレイ履歴を共有するサービスです。",
   "underConstruction": "このサイトは準備中です。デモ目的に公開しています。",
   "about": "LBoL Logsは<steam>東方光耀夜 〜 Lost Branch of Legend</steam> (LBoL)のプレイ履歴を共有するサービスです。<br />ゲーム内の履歴データは情報が少なく過去50回分しなかい保存されないため、自作Mod<mod>LBoL Run Logger</mod> (開発中)が生成したデータだけのサポートとなります。<br />意見などはお手数ですが、<discord>Discordの日本語専用スレッド</discord>からお願いします。",
