--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -44,8 +44,8 @@
       ],
       "next": [
         "Images",
-        "Details of Seija Battle",
-        "Stations other than battle (events, shop, etc.)",
+        "Details of Seija Battle (Mod & site)",
+        "Stations other than battle (events, shop, etc.) (Mod & site)",
         "Mod release",
         "Log upload (share with url)"
       ],
