--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -44,8 +44,8 @@
       ],
       "next": [
         "画像表示",
-        "正邪戦闘詳細",
-        "戦闘以外（イベント、ショップなど）のマス",
+        "正邪戦闘詳細（Mod、サイト）",
+        "戦闘以外（イベント、ショップなど）のマス（Mod、サイト）",
         "Mod公開",
         "履歴アップロード機能（URLで共有）"
       ],
