fix dir, add loading tran, change setId to setRunData

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -68,5 +68,6 @@
       "Although validation is performed before uploading, no responsibility will be accepted for user accidentially uploading private information."
     ]
   },
-  "version": "Version"
+  "version": "Version",
+  "loading": "Loading..."
 }
