--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -68,5 +68,6 @@
       "アップロード前にバリデーションは行われますが、誤って個人情報等を送信した場合、当方は一切の責任を負いません"
     ]
   },
-  "version": "バージョン"
+  "version": "バージョン",
+  "loading": "読み込み中…"
 }
