make logo common, conditional header

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -63,7 +63,7 @@
   "attention": {
     "key": "Attention",
     "value": [
-      "No cookie is collected. (Language prefernce is saved in cookie yet.)",
+      "No cookie is collected. (Language preference is saved in cookie yet.)",
       "No private information, such as PC information, Steam account information, payment information is collected by the Mod nor included in the generated data.",
       "Although validation is performed before uploading, no responsibility will be accepted for user accidentially uploading private information."
     ]
