--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -71,5 +71,5 @@
   "version": "Version",
   "loading": "Loading...",
   "processing": "Processing...",
-  "notAvailableYet": "現在は利用できません"
+  "notAvailableYet": "Not available yet"
 }
