--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -71,5 +71,5 @@
   "version": "バージョン",
   "loading": "読み込み中…",
   "processing": "処理中…",
-  "notAvailableYet": ""
+  "notAvailableYet": "現在は利用できません"
 }
