--- a/public/locales/en/log.json
+++ b/public/locales/en/log.json
@@ -1,5 +1,7 @@
 {
   "map": "Map",
   "act": "Act {{act}}",
-  "level": "Level {{level}}"
+  "level": "Level {{level}}",
+  "cardsCount": "Cards: {{count}}",
+  "exhibitsCount": "Exhibits: {{count}}"
 }
