--- a/public/locales/en/log.json
+++ b/public/locales/en/log.json
@@ -1,7 +1,10 @@
 {
   "map": "Map",
   "act": "Act {{act}}",
+  "act_4": "Final Act",
   "level": "Level {{level}}",
-  "cardsCount": "Cards: {{count}}",
-  "exhibitsCount": "Exhibits: {{count}}"
+  "cardsCount_one": "Card: {{count}}",
+  "cardsCount_other": "Cards: {{count}}",
+  "exhibitsCount_one": "Exhibit: {{count}}",
+  "exhibitsCount_other": "Exhibits: {{count}}"
 }
