--- a/public/locales/ja/log.json
+++ b/public/locales/ja/log.json
@@ -1,6 +1,7 @@
 {
   "map": "マップ",
   "act": "第{{act}}章",
+  "act_4": "最終章",
   "level": "レベル{{level}}",
   "cardsCount": "カード枚数：{{count}}",
   "exhibitsCount": "展示品数：{{count}}"
