--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -24,7 +24,7 @@
         "難易度、難題、結果",
         "マップ",
         "ルート",
-        "展示品の提示（イベントやショップを除く）、獲得、喪失履歴",
+        "展示品の提示（イベントやショップを除く）、獲得、喪失、消費履歴",
         "カードの提示（イベントやショップを除く）、獲得、削除、アップグレード履歴",
         "HP/最大HP、P/最大P、金の変動",
         "敵エンカウント（名前とターン数のみ）",
