common.json を更新

--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -15,7 +15,7 @@
         "サイト基本表示",
         "言語切り替え",
         "バージョン切り替え（v1.5.1以降）",
-        "プレイ履歴のデモ",
+        "プレイ履歴のデモデータ",
         "プレイ履歴の基本表示",
         "カード以外の画像"
       ],
