common.json を更新

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -15,7 +15,7 @@
         "Site basic display",
         "Language switch (sorry for my poor English)",
         "Version switch (since v1.5.1)",
-        "Prepare Demo",
+        "Demo data of run history",
         "Basic display of run history",
         "Images except cards"
       ],
