--- a/public/locales/zh/common.json
+++ b/public/locales/zh/common.json
@@ -1,4 +1,5 @@
 {
+  "TODO" : "TODO:",
   "title": "LBoL Logs",
   "subtitle": "Run History Sharing",
   "description": "LBoL Logs is a run history sharing service of Touhou: Lost Branch of Legend.",
