--- a/public/locales/en/runList.json
+++ b/public/locales/en/runList.json
@@ -6,5 +6,7 @@
   "requests": "Requests",
   "result": "Result",
   "timestamp": "Timestamp",
+  "startingExhibit": "Starting Exhibit",
+  "swappedExhibit": "Swapped Exhibit",
   "sort": "Sort"
 }
