--- a/public/locales/ja/runList.json
+++ b/public/locales/ja/runList.json
@@ -6,9 +6,9 @@
   "requests": "難題",
   "result": "結果",
   "timestamp": "タイムスタンプ",
+  "any": "何でも",
   "startingExhibit": "初期展示品",
   "swappedExhibit": "展示品交換",
-  "sort": "並べ替え",
   "apply": "適用",
   "reset": "リセット"
 }
