--- a/public/locales/ja/runList.json
+++ b/public/locales/ja/runList.json
@@ -6,7 +6,7 @@
   "requests": "難題",
   "result": "結果",
   "timestamp": "タイムスタンプ",
-  "all": "すべて",
+  "all": "全部",
   "startingExhibit": "初期展示品",
   "swappedExhibit": "展示品交換",
   "apply": "適用",
