--- a/public/locales/ja/site.json
+++ b/public/locales/ja/site.json
@@ -12,12 +12,13 @@
     },
     "categories": {
       "site": [
-        "サイト基本表示",
+        "トップページ（一覧、フィルタ）",
+        "プレイ履歴の詳細ページ（サマリー、マップ、ルート、変化、所持）",
+        "プレイ履歴のデモデータ",
         "言語切り替え",
         "バージョン切り替え（v1.5.1以降）",
-        "プレイ履歴のデモデータ",
-        "プレイ履歴の基本表示",
-        "カード以外の画像"
+        "画像、設定、テキスト",
+        "ダークモード対応"
       ],
       "mod": [
         "キャラ情報",
@@ -42,20 +43,17 @@
     },
     "categories": {
       "now": [
-        "一般用語の翻訳ファイル",
-        "全体の見直し、調整"
+        "正邪戦闘詳細（Mod、サイト）",
+        "戦闘以外（イベント、ショップなど）のマス（Mod、サイト）"
       ],
       "next": [
-        "デッキ、所持展示品表示のリデザイン（案募集中）",
-        "正邪戦闘詳細（Mod、サイト）",
-        "戦闘以外（イベント、ショップなど）のマス（Mod、サイト）",
         "Mod公開",
-        "履歴アップロード機能（URLで共有）"
+        "履歴アップロード機能（URL共有のみ）"
       ],
       "later": [
-        "カード画像",
-        "履歴一覧（フィルタ、ソート）",
-        "UI、UX"
+        "アップロードした履歴の一覧への自動反映",
+        "繁体字・簡体字中国語サポート",
+        "レベルのUI調整"
       ],
       "trash": [
         "戦闘詳細",
