--- a/public/locales/en/dialogues.json
+++ b/public/locales/en/dialogues.json
@@ -1,6 +1,7 @@
 {
-  "Id": {
-    "line.abc": "ABC",
-    "line.def": "DEF"
+  "YukariProvide": {
+    "line:04e7520": "「最近はよく徹夜していて、目の下にクマが出てしまったわ…」",
+    "line:049c1f2": "【渡す】<h>外の世界のアイクリーム</h>を渡し、<h>境界感知機</h>を手に入れる",
+    "line:06cd2f3": "【渡さない】何も起らない"
   }
 }
